# X-Track-ESP-IDF

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
App/: App.cpp  CMakeLists.txt
App/Pages/: Page.h
App/Pages/Dialplate/: Dialplate.cpp  DialplateModel.cpp  DialplateModel.h  DialplateView.cpp  DialplateView.h
App/Pages/LiveMap/: LiveMap.cpp  LiveMapModel.cpp  LiveMapModel.h  LiveMapView.cpp  LiveMapView.h
App/Pages/StartUp/: StartUp.cpp  StartUpModel.h  StartUpView.cpp
App/Pages/StatusBar/: StatusBar.cpp  StatusBar.h
App/Pages/SystemInfos/: SystemInfos.cpp  SystemInfosModel.cpp  SystemInfosModel.h  SystemInfosView.cpp
App/Pages/_Template/: Template.cpp
App/Resource/: ResourcePool.cpp  ResourcePool.h
components/ArduinoAPI/: CMakeLists.txt  WString.cpp  itoa.c  itoa.h
components/ArduinoJson/: idf_component.yml
components/DataCenter/: Account.cpp  Account.h  CMakeLists.txt  DataCenter.cpp  DataCenter.h  DataCenterLog.h
components/DataProc/: CMakeLists.txt  DP_Clock.cpp  DP_GPS.cpp  DP_IMU.cpp  DP_MAG.cpp  DP_MusicPlayer.cpp  DP_Power.cpp  DP_Recorder.cpp  DP_SportStatus.cpp  DP_Storage.cpp  DP_SysConfig.cpp  DP_TrackFilter.cpp  DP_TzConv.cpp  DataProc.cpp  DataProc.h  DataProc_Def.h
components/GPX/: CMakeLists.txt  GPX.h
components/GPX_Parser/: GPX_Parser.h
components/MY_HAL/: CMakeLists.txt  HAL_Audio.cpp  HAL_Clock.cpp  HAL_Def.h  HAL_GPS.cpp  HAL_IMU.cpp  HAL_MAG.cpp
components/MapConv/: CMakeLists.txt  MapConv.cpp
components/Music/: MusicCode.h
components/PageManager/: PM_Log.h  (+3 more)
main/: CMakeLists.txt  main.cpp
(+8 files in other folders)
